# SimpleAssets-EventReceiverExample

./: CMakeLists.txt  README.md  build.sh
include/: SAEventReceiver.hpp
ricardian/: SAEventReceiver.contracts.md
src/: CMakeLists.txt  SAEventReceiver.cpp
